fix: clear float page spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2379,10 +2379,6 @@ table td#today a {
   display: block;
 }
 
-.size-thumbnail {
-  margin-bottom: 20px;
-}
-
 img.emoji {
   width: 15px;
   height: 15px;
