--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -217,7 +217,7 @@ table {
   display: block;
 }
 .size-thumbnail {
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
 }
 
 img {
